@@ -15,6 +15,8 @@ Version 2.3.0
    - Changed copyright years to 2007
    - Updated Swedish translation (thanks to Daniel Nylander)
    - Added Daniel Nylander to contributors
+   - Feature: Better handling of messages with a false character set in the
+        header
 
 Version 2.2.6
  * Robert Sowada
